FLXX-88: add swagger docs for table endpoints
