# cmd/docs/swagger.yaml
@@ -7,6 +7,11 @@ definitions:
           $ref: '#/definitions/types.TableColumn'
         type: array
     type: object
+  column_requests.RenameRequest:
+    properties:
+      name:
+        type: string
+    type: object
   organization_requests.CreateRequest:
     properties:
       name:
@@ -92,6 +97,20 @@ definitions:
         type: array
       success:
         type: boolean
+    type: object
+  table_requests.CreateRequest:
+    properties:
+      columns:
+        items:
+          $ref: '#/definitions/types.TableColumn'
+        type: array
+      name:
+        type: string
+    type: object
+  table_requests.RenameRequest:
+    properties:
+      name:
+        type: string
     type: object
   types.TableColumn:
     properties:
@@ -424,6 +443,169 @@ paths:
       summary: Delete a user from an organization
       tags:
       - organizations
+  /projects/{project_id}/tables:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of tables in a specified project.
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of tables
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.Response'
+            - properties:
+                content:
+                  items:
+                    $ref: '#/definitions/resources.TableResponse'
+                  type: array
+              type: object
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal server error
+      summary: List all tables
+      tags:
+      - tables
+    post:
+      consumes:
+      - application/json
+      description: Define and create a new table within a specified project.
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      - description: Table definition JSON
+        in: body
+        name: table
+        required: true
+        schema:
+          $ref: '#/definitions/table_requests.CreateRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Table created
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.Response'
+            - properties:
+                content:
+                  $ref: '#/definitions/resources.TableResponse'
+              type: object
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "422":
+          description: Unprocessable entity
+        "500":
+          description: Internal server error
+      summary: Create a new table
+      tags:
+      - tables
+  /projects/{project_id}/tables/{table_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Permanently delete a specific table from a given project.
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      - description: Table ID
+        in: path
+        name: table_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: Table deleted successfully
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "404":
+          description: Table not found
+        "500":
+          description: Internal server error
+      summary: Delete a table
+      tags:
+      - tables
+    get:
+      consumes:
+      - application/json
+      description: Retrieve details of a specific table within a project.
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      - description: Table ID
+        in: path
+        name: table_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Table details
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.Response'
+            - properties:
+                content:
+                  $ref: '#/definitions/resources.TableResponse'
+              type: object
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "404":
+          description: Table not found
+        "500":
+          description: Internal server error
+      summary: Get table details
+      tags:
+      - tables
   /projects/{project_id}/tables/{table_id}/columns:
     post:
       consumes:
@@ -565,6 +747,105 @@ paths:
       summary: Delete a column from a table
       tags:
       - columns
+    put:
+      consumes:
+      - application/json
+      description: Change the name of a specific column in a given table.
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      - description: Table ID
+        in: path
+        name: table_id
+        required: true
+        type: string
+      - description: Existing Column Name
+        in: path
+        name: column_name
+        required: true
+        type: string
+      - description: New column name JSON
+        in: body
+        name: new_name
+        required: true
+        schema:
+          $ref: '#/definitions/column_requests.RenameRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Column renamed
+          schema:
+            $ref: '#/definitions/responses.Response'
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "422":
+          description: Unprocessable entity
+        "500":
+          description: Internal server error
+      summary: Rename a column in a table
+      tags:
+      - columns
+  /projects/{project_id}/tables/{table_id}/duplicate:
+    put:
+      consumes:
+      - application/json
+      description: Create a copy of a specified table within a project.
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      - description: Table ID
+        in: path
+        name: table_id
+        required: true
+        type: string
+      - description: Duplicate table name JSON
+        in: body
+        name: new_name
+        required: true
+        schema:
+          $ref: '#/definitions/table_requests.RenameRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Table duplicated
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.Response'
+            - properties:
+                content:
+                  $ref: '#/definitions/resources.TableResponse'
+              type: object
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "422":
+          description: Unprocessable entity
+        "500":
+          description: Internal server error
+      summary: Duplicate a table
+      tags:
+      - tables
   /projects/{project_id}/tables/{table_id}/indexes:
     get:
       consumes:
@@ -745,4 +1026,54 @@ paths:
       summary: Show details of a specific index
       tags:
       - indexes
+  /projects/{project_id}/tables/{table_id}/rename:
+    put:
+      consumes:
+      - application/json
+      description: Change the name of a specific table within a project.
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: string
+      - description: Table ID
+        in: path
+        name: table_id
+        required: true
+        type: string
+      - description: New table name JSON
+        in: body
+        name: new_name
+        required: true
+        schema:
+          $ref: '#/definitions/table_requests.RenameRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Table renamed
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.Response'
+            - properties:
+                content:
+                  $ref: '#/definitions/resources.TableResponse'
+              type: object
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "422":
+          description: Unprocessable entity
+        "500":
+          description: Internal server error
+      summary: Rename a table
+      tags:
+      - tables
 swagger: "2.0"
